# prepembd

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
src/prepembd/lib/: helper.py  path.py
tests/: test_tokenize.py
tests/lib/: test_helper.py  test_path.py
tests/resources/md/: r1.md  rust.md  test.md  test02.md
